--- a/src/pages/Profile/Profile.module.scss
+++ b/src/pages/Profile/Profile.module.scss
@@ -43,13 +43,12 @@
 
 .userPageIcons {
 
-  width: 1.3rem;
+  width: 1.4rem;
   padding: 5px;
 }
 
 .logoutIcon {
 
-  width: 1.3rem;
 }
 
 .inputField {
