--- a/src/pages/chat/chat.module.scss
+++ b/src/pages/chat/chat.module.scss
@@ -1,5 +1,6 @@
 .chatNavUserInfo {
   display: flex;
+  font-size: 14px;
   justify-content: space-around;
   align-items: center;
   grid-gap: 5px;
