--- a/src/pages/login/LoginPg.module.scss
+++ b/src/pages/login/LoginPg.module.scss
@@ -49,9 +49,9 @@
 .logo {
   min-width: 100px;
   border-radius: 33%;
-  border: solid;
-  border-width: 2px;
-  border-color: #f6efe8;
+  // border: solid;
+  // border-width: 2px;
+  // border-color: #f6efe8;
   display: block;
   margin-left: auto;
   margin-right: auto;
